# IA-MERCADO

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
agents/: clean_agent.py  geocode_agent.py  ingest_agent.py  ml_agent.py  publish_agent.py
app/: config.py  main.py
app/templates/: index.html
frontend/: index.html  package.json
frontend/src/: App.jsx
tests/: test_pipeline.py
tests/fixtures/: sample.html
