[project]
name = "ia-mercado"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "requests",
    "beautifulsoup4",
    "geopy",
    "scikit-learn",
    "joblib",
    "python-dotenv",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
strict = false
ignore_missing_imports = true
